# star-collector

./: .replit  StarCollector.html  index.html  pyproject.toml  replit.md
backend/: auth.py  database.py  main.py  run.py
pages/picturebook/: CHANGELOG.md
